--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 /* Font & Base Styles */
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #fff;
     font-family: "Krona One", sans-serif;
@@ -21,6 +25,8 @@ body {
   .logo {
     font-size: 1.5rem;
     font-weight: bold;
+    color: black;
+    text-decoration: none;
   }
   
   /* menu item*/ 
@@ -211,3 +217,4 @@ body {
     margin-left: 20px;
     margin-top: 40px;
   }
+
