--- a/css/styles.css
+++ b/css/styles.css
@@ -100,8 +100,8 @@ body {
     z-index: 2;
     text-align: center;
     color: white;
-    font-size: 1.8rem;
-    max-width: 700px;
+    font-size: 1.5rem;
+    max-width: 900px;
     padding: 1rem 2rem;
     border-radius: 12px;
   }
@@ -109,15 +109,18 @@ body {
   /* Circle Images */
   .circle-row {
     display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 columns */
+  grid-template-columns: repeat(3, 1fr); 
   gap: 40px;
   padding-top: 20px;
   padding-bottom: 20px;
-  justify-items: center; /* center items inside each grid cell */
+  justify-items: center; 
+  background-color: #BC97D3;
   }
 
   .circle-item {
     text-align: center;
+    color: white;
+    
 }
 
 
@@ -126,6 +129,7 @@ body {
     font-weight: 600;
     margin-bottom: 10px;
     text-align: center;
+    color: black;
 }
 
 .circle-item img {
@@ -135,8 +139,37 @@ body {
   object-fit: cover;
   object-position: center;
   display: block;
+  margin-left: auto;   
+  margin-right: auto;  
 }
 
+/* Work Section */
+
+.hero-text-work {
+
+
+}
+
+.photo-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 columns */
+    gap: 10px; /* spacing between images */
+    max-width: 1000px;
+    margin: 0 auto; /* center the whole grid */
+    padding: 20px;
+  }
+  
+  .photo-item {
+    aspect-ratio: 1 / 1; /* Make each photo-item a perfect square */
+    overflow: hidden;
+  }
+  
+  .photo-item img {
+    width: 100%;
+  height: 100%;
+  object-fit: cover; /* Makes the image fill and crop nicely */
+  display: block;
+  }
 
 
 /* recent work card */
