--- a/css/styles.css
+++ b/css/styles.css
@@ -329,8 +329,16 @@ body {
   }
   
   .footer-right {
+    list-style: none;
+    text-decoration: none;
     text-align: right;  
     font-size: 15px;
+    color: black; 
+  }
+
+  .footer-right a{
+    text-decoration: none;
+    color: black; 
   }
 
   footer h1 {
